--- a/guestbook.html
+++ b/guestbook.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>留言板 - Zaoyoe 拾光里</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -168,48 +171,14 @@
         </div>
     </div>
 
-    <!-- Firebase SDK -->
-    <script type="module">
-        import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js';
-        import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, onAuthStateChanged, signOut, updateProfile } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js';
-        import { getFirestore, doc, setDoc, getDoc, collection, addDoc, query, orderBy, onSnapshot, limit } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js';
+    <!-- LeanCloud SDK -->
+    <script src="https://cdn.jsdelivr.net/npm/leancloud-storage@4.15.2/dist/av-min.js"></script>
+    <script src="./leancloud-init.js?v=20251125_ACL_FIX" defer></script>
+    <script src="./leancloud-auth-functions.js?v=20251125_ACL_FIX" defer></script>
+    <script src="./leancloud-guestbook-functions.js?v=20251125_ACL_FIX" defer></script>
 
-        const firebaseConfig = {
-            apiKey: "AIzaSyDBk5juaw5qNSPFiZVSqRJWfllEtrD6oWg",
-            authDomain: "zaoyoe-9bdf2.firebaseapp.com",
-            projectId: "zaoyoe-9bdf2",
-            storageBucket: "zaoyoe-9bdf2.firebasestorage.app",
-            messagingSenderId: "908400021338",
-            appId: "1:908400021338:web:e0bff6e65ff55d2b7b6d63"
-        };
-
-        const app = initializeApp(firebaseConfig);
-        const auth = getAuth(app);
-        const db = getFirestore(app);
-
-        // Make auth and db available globally
-        window.firebaseAuth = auth;
-        window.firebaseDB = db;
-        window.createUserWithEmailAndPassword = createUserWithEmailAndPassword;
-        window.signInWithEmailAndPassword = signInWithEmailAndPassword;
-        window.onAuthStateChanged = onAuthStateChanged;
-        window.signOut = signOut;
-        window.updateProfile = updateProfile;
-
-        // Firestore functions
-        window.firestoreDoc = doc;
-        window.firestoreSetDoc = setDoc;
-        window.firestoreGetDoc = getDoc;
-        window.firestoreCollection = collection;
-        window.firestoreAddDoc = addDoc;
-        window.firestoreQuery = query;
-        window.firestoreOrderBy = orderBy;
-        window.firestoreOnSnapshot = onSnapshot;
-        window.firestoreLimit = limit;
-    </script>
-
-    <script src="script.js?v=20251124_FIX_FINAL" defer></script>
-    <script src="guestbook.js?v=20251124_FIX_FINAL" defer></script>
+    <script src="script.js?v=20251125_ACL_FIX" defer></script>
+    <script src="guestbook.js?v=20251125_ACL_FIX" defer></script>
 </body>
 
 </html>
