--- a/guestbook.html
+++ b/guestbook.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-    <title>留言板 - Zaoyoe 拾光里</title>
+    <title>留言板 - Zaoyoe</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -44,7 +44,7 @@
         /* Ensure responsive doesn't override */
         @media (min-width: 1025px) {
             .message-container {
-                column-count: 4 !important;
+                column-count: 6 !important;
             }
         }
 
@@ -164,7 +164,6 @@
                     <textarea id="commentContent" rows="3" placeholder="写下你的评论..." required></textarea>
                 </div>
                 <div class="form-actions">
-                    <button type="button" class="cancel-btn" onclick="closeCommentModal(event)">取消</button>
                     <button type="submit" class="submit-btn">发送</button>
                 </div>
             </form>
