--- a/index.html
+++ b/index.html
@@ -26,9 +26,15 @@
     </script>
     <!-- LeanCloud SDK -->
     <script src="https://cdn.jsdelivr.net/npm/leancloud-storage@4.15.2/dist/av-min.js"></script>
-    <script src="./leancloud-init.js?v=20251125_ACL_FIX" defer></script>
-    <script src="./leancloud-auth-functions.js?v=20251125_ACL_FIX" defer></script>
-    <script src="./leancloud-guestbook-functions.js?v=20251125_ACL_FIX" defer></script>
+    <script src="./leancloud-init.js?v=20251126_GOOGLE_OAUTH" defer></script>
+    <script src="./leancloud-auth-functions.js?v=20251126_GOOGLE_OAUTH" defer></script>
+    <script src="./leancloud-guestbook-functions.js?v=20251126_GOOGLE_OAUTH" defer></script>
+
+    <!-- Google Sign-In SDK -->
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+
+    <!-- Google OAuth Implementation -->
+    <script src="./google-oauth.js?v=20251126_OAUTH_POPUP" defer></script>
 
     <style>
         /* Homepage entrance animation - Subtle */
@@ -122,7 +128,7 @@
                 </div>
             </div>
             <div class="profile-main">
-                <div class="shop-heading-large">Zaoyoe 拾光里</div>
+                <div class="shop-heading-large">Zaoyoe</div>
 
             </div>
         </div>
@@ -202,7 +208,7 @@
                 <!-- Nickname input removed - Will use logged in user -->
 
                 <div class="input-group relative-container">
-                    <textarea id="guestMessage" placeholder="写下您的留言... (Message)" required></textarea>
+                    <textarea id="guestMessage" placeholder="写下您的留言... (Message)"></textarea>
 
                     <!-- Integrated Upload Icon -->
                     <div class="upload-icon-wrapper">
@@ -216,9 +222,7 @@
 
                 <div id="imagePreview" class="image-preview-container" style="display: none;">
                     <img id="previewImg" src="" alt="Preview">
-                    <button type="button" class="remove-image-btn" id="removeImageBtn">
-                        <i class="fas fa-times"></i>
-                    </button>
+                    <button type="button" class="remove-image-btn" id="removeImageBtn"></button>
                 </div>
 
                 <button type="submit" class="submit-btn"
@@ -328,7 +332,7 @@
 
     <!-- Login Trigger Button (Top Right) -->
     <div class="top-right-nav" style="position: absolute; top: 30px; right: 40px; z-index: 100;">
-        <button id="authBtn" class="login-trigger-btn" onclick="handleAuthClick()">
+        <button id="authBtn" class="login-trigger-btn" onclick="handleAuthClick(event)">
             <!-- Default Icon (shown when logged out) -->
             <i id="defaultAuthIcon" class="fas fa-user-circle" style="font-size: 1.2rem;"></i>
 
@@ -339,23 +343,18 @@
         </button>
 
         <div id="userDropdown" class="user-dropdown">
-            <div class="menu-item" id="profileMenuItem"
-                style="position: relative; cursor: default; background: none !important; padding-bottom: 20px;">
-                <div style="position: relative; cursor: pointer;"
-                    onclick="document.getElementById('avatarUpload').click()">
-                    <img id="dropdownAvatar" class="nav-user-avatar" src="" alt="Avatar"
-                        style="width: 64px; height: 64px; border: 2px solid rgba(255,255,255,0.2); transition: transform 0.1s;">
-                    <!-- Overlay Icon for Change Avatar (Positioned at bottom right) -->
-                    <div class="avatar-overlay-icon"
-                        style="position: absolute; bottom: 0; right: 0; transform: translate(25%, 25%);">
+            <!-- Profile Section -->
+            <div class="menu-item profile-section" id="profileMenuItem"
+                onclick="document.getElementById('avatarUpload').click()">
+                <div class="avatar-container">
+                    <img id="dropdownAvatar" class="nav-user-avatar" src="" alt="Avatar">
+                    <div class="avatar-overlay-icon">
                         <i class="fas fa-camera"></i>
                     </div>
                 </div>
-                <div
-                    style="display: flex; flex-direction: column; gap: 4px; margin-left: 16px; justify-content: center;">
-                    <!-- Only show Email as requested -->
-                    <span id="profileEmail"
-                        style="font-weight: 500; font-size: 14px; color: rgba(255,255,255,0.8); word-break: break-all;"></span>
+                <div class="profile-info">
+                    <span id="profileEmail" class="profile-name"></span>
+                    <span class="profile-hint">点击更换头像</span>
                 </div>
             </div>
 
@@ -365,7 +364,7 @@
 
             <div class="divider" style="margin: 5px 0; border-top: 1px solid rgba(255,255,255,0.1);"></div>
 
-            <div class="menu-item logout" onclick="handleLogout()">
+            <div class="menu-item logout" onclick="handleLogout(event)">
                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
                     <polyline points="16 17 21 12 16 7"></polyline>
@@ -518,8 +517,8 @@
     </div>
 
     <!-- Elastic Press Effect -->
-    <script src="elastic-press.js?v=20251125_ACL_FIX" defer></script>
-    <script src="script.js?v=20251125_ACL_FIX" defer></script>
+    <script src="elastic-press.js?v=20251126_GOOGLE_OAUTH_FIX" defer></script>
+    <script src="script.js?v=20251126_GOOGLE_OAUTH_FIX" defer></script>
 </body>
 
 </html>
