--- a/guestbook.html
+++ b/guestbook.html
@@ -14,7 +14,7 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Outfit:wght@500;700;800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css?v=20251124_FIX_FINAL">
+    <link rel="stylesheet" href="style.css?v=1764209104">
     <style>
         /* Force 4 columns - Override any conflicts */
         .guestbook-main {
@@ -28,6 +28,19 @@
             width: 100% !important;
         }
 
+        /* Apply animation to wrapper (JS generates wrapper with inline delay) */
+        .message-anim-wrapper {
+            opacity: 0;
+            transform: translateY(30px);
+            transition: opacity 0.6s ease, transform 0.6s cubic-bezier(0.34, 1.56, 0.64, 1);
+            /* Delay is set inline by JS via transition-delay */
+        }
+
+        .message-anim-wrapper.visible {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
         .message-item {
             break-inside: avoid !important;
             -webkit-column-break-inside: avoid !important;
@@ -35,11 +48,9 @@
             margin-bottom: 20px !important;
             display: inline-block !important;
             width: 100% !important;
-
-            /* Animation base styles - Match Homepage Intensity */
-            opacity: 0;
-            animation: slideInUp 0.4s ease-out forwards;
         }
+
+        /* Remove old nth-child rules - JS sets delay dynamically */
 
         /* Ensure responsive doesn't override */
         @media (min-width: 1025px) {
@@ -55,18 +66,7 @@
             }
         }
 
-        /* Entrance animation - Subtle (Same as Home) */
-        @keyframes slideInUp {
-            from {
-                opacity: 0;
-                transform: translateY(15px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
+        /* Entrance animation - Removed local slideInUp to use global fadeInUpElastic */
 
         /* Exit animation */
         @keyframes fadeOutDown {
