--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Outfit:wght@500;700;800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css?v=1764209104">
-    <link rel="stylesheet" href="login_styles.css?v=1764163660">
+    <link rel="stylesheet" href="style.css?v=1764245500">
+    <link rel="stylesheet" href="login_styles.css?v=FIX_CURSOR_FINAL">
     <link rel="stylesheet" href="login_dual_mode.css">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script type="text/javascript">
         (function () {
-            // Replace with your Public Key
-            emailjs.init("vawaxLVEzJMAVbut0");
+            emailjs.init("user_YOUR_USER_ID"); // Replace with your actual User ID
         })();
     </script>
     <!-- LeanCloud SDK -->
     <script src="https://cdn.jsdelivr.net/npm/leancloud-storage@4.15.2/dist/av-min.js"></script>
     <script src="./leancloud-init.js?v=1764163660" defer></script>
-    <script src="./leancloud-auth-functions.js?v=1764207414" defer></script>
+    <script src="./leancloud-auth-functions.js?v=1764232600" defer></script>
+    <script src="./phone-auth-ui.js" defer></script>
     <script src="./leancloud-guestbook-functions.js?v=1764163660" defer></script>
 
     <!-- Google Sign-In SDK -->
@@ -193,7 +193,8 @@
 
     <!-- Guestbook Modal -->
     <div class="modal-overlay" id="guestbookModal" onclick="closeModal(event)">
-        <div class="modal-content guestbook-content premium-modal" style="position: relative;" onclick="event.stopPropagation()">
+        <div class="modal-content guestbook-content premium-modal" style="position: relative;"
+            onclick="event.stopPropagation()">
             <!-- Mac Window Controls -->
             <div class="mac-controls">
                 <div class="mac-dot red" onclick="closeModal(event)">
@@ -348,32 +349,20 @@
         <div id="userDropdown" class="user-dropdown" style="z-index: 2100;">
             <!-- Personal Profile -->
             <div class="menu-item profile-menu-item" onclick="openProfileModal(event)">
-                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
-                    <circle cx="12" cy="7" r="4"></circle>
-                </svg>
+                <i class="fas fa-user" style="font-size: 1rem; width: 20px; text-align: center;"></i>
                 个人资料
             </div>
 
             <div class="divider" style="margin: 5px 0; border-top: 1px solid rgba(255,255,255,0.1);"></div>
 
             <div class="menu-item switch-account" onclick="handleSwitchAccount(event)">
-                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
-                    <circle cx="9" cy="7" r="4"></circle>
-                    <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
-                    <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
-                </svg>
+                <i class="fas fa-repeat" style="font-size: 1rem; width: 20px; text-align: center;"></i>
                 切换账户
             </div>
 
             <div class="menu-item logout" onclick="handleLogout(event)">
-                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
-                    <polyline points="16 17 21 12 16 7"></polyline>
-                    <line x1="21" y1="12" x2="9" y2="12"></line>
-                </svg>
-                Log Out
+                <i class="fas fa-sign-out-alt" style="font-size: 1rem; width: 20px; text-align: center;"></i>
+                退出登录
             </div>
         </div>
     </div>
@@ -502,12 +491,11 @@
 
     <!-- Coming Soon Modal -->
     <!-- Profile Modal -->
-    <div class="modal-overlay" id="profileModal" onclick="closeModal(event)">
+    <div class="modal-overlay" id="profileModal" onclick="if(event.target === this) closeProfileModal()">
         <div class="modal-content profile-modal">
             <!-- Mac Window Controls -->
             <div class="mac-controls">
-                <div class="mac-dot red" onclick="document.getElementById('profileModal').classList.remove('active')"><i
-                        class="fas fa-times"></i></div>
+                <div class="mac-dot red" onclick="closeProfileModal()"><i class="fas fa-times"></i></div>
                 <div class="mac-dot yellow"></div>
                 <div class="mac-dot green"></div>
             </div>
@@ -521,8 +509,8 @@
             <!-- Flip Container -->
             <div class="profile-flip-container">
                 <div class="profile-flip-inner">
-                    <!-- View 1: Profile (Front) -->
-                    <div id="view-profile" class="profile-view profile-front">
+                    <!-- Front Side: Profile Info -->
+                    <div class="profile-view profile-front active-view">
                         <div class="modal-title">个人资料</div>
 
                         <!-- Avatar Section -->
@@ -569,35 +557,105 @@
                         </div>
                     </div>
 
-                    <!-- View 2: Security (Back) -->
+                    <!-- View 2: Security (Back) - NEW COLLAPSIBLE DESIGN -->
                     <div id="view-security" class="profile-view profile-back">
                         <div class="modal-title">安全设置</div>
 
-                        <!-- 1. Email Verification -->
-                        <div class="security-item">
-                            <div class="security-header">
-                                <span>邮箱验证</span>
-                                <span id="emailStatusIcon"></span>
+                        <div class="security-layout">
+                            <!-- Left Sidebar Navigation -->
+                            <div class="security-sidebar">
+                                <div class="security-nav-item active" onclick="toggleSecuritySection('password')">
+                                    <i class="fas fa-key"></i>
+                                    <span>修改密码</span>
+                                    <i class="fas fa-chevron-right nav-arrow"></i>
+                                </div>
+                                <div class="security-nav-item" onclick="toggleSecuritySection('phone')">
+                                    <i class="fas fa-mobile-alt"></i>
+                                    <span>绑定手机号</span>
+                                    <i class="fas fa-chevron-right nav-arrow"></i>
+                                </div>
+                                <div class="security-nav-item danger-nav" onclick="toggleSecuritySection('delete')">
+                                    <i class="fas fa-exclamation-triangle"></i>
+                                    <span>注销账号</span>
+                                    <i class="fas fa-chevron-right nav-arrow"></i>
+                                </div>
                             </div>
-                            <p class="security-desc" id="emailStatusText">检查中...</p>
-                            <button id="resendVerifyBtn" class="secondary-btn" onclick="resendVerificationEmail()"
-                                style="display: none;">重发验证邮件</button>
-                        </div>
 
-                        <!-- 2. Change Password -->
-                        <div class="security-item">
-                            <div class="security-header">修改密码</div>
-                            <input type="password" id="oldPasswordInput" placeholder="当前密码" class="security-input">
-                            <input type="password" id="newPasswordInput" placeholder="新密码 (至少6位)"
-                                class="security-input">
-                            <button class="save-btn small" onclick="changePassword()">更新密码</button>
-                        </div>
+                            <!-- Right Content Area -->
+                            <div class="security-content">
+                                <!-- Password Section -->
+                                <div id="section-password" class="security-section active">
+                                    <h3 class="section-title">修改密码</h3>
+                                    <p class="section-desc">定期更换密码可以提高账户安全性</p>
+                                    <input type="password" id="oldPasswordInput" placeholder="当前密码"
+                                        class="security-input">
+                                    <input type="password" id="newPasswordInput" placeholder="新密码 (至少6位)"
+                                        class="security-input">
+                                    <button class="save-btn" onclick="changePassword()">更新密码</button>
+                                </div>
 
-                        <!-- 3. Delete Account -->
-                        <div class="security-item danger-zone">
-                            <div class="security-header text-red">注销账号</div>
-                            <p class="security-desc">此操作不可恢复，您的所有数据将被永久删除。</p>
-                            <button class="danger-btn" onclick="deleteAccount()">注销账号</button>
+                                <!-- Phone Binding Section -->
+                                <div id="section-phone" class="security-section">
+                                    <h3 class="section-title">
+                                        绑定手机号
+                                        <span id="phoneBindStatus" class="status-badge"
+                                            style="font-size: 0.75rem; font-weight: normal; margin-left: auto; opacity: 0.7;">
+                                            <!-- Will show binding status -->
+                                        </span>
+                                    </h3>
+                                    <p class="section-desc">绑定手机号可用于找回忘记的邮箱账号</p>
+
+                                    <!-- If not bound, show binding UI -->
+                                    <div id="phoneBindingUI" style="display: none;">
+                                        <div class="phone-input-group">
+                                            <select id="profile-country-code" class="security-input">
+                                                <option value="+86">+86</option>
+                                                <option value="+1">+1</option>
+                                                <option value="+44">+44</option>
+                                                <option value="+852">+852</option>
+                                                <option value="+853">+853</option>
+                                            </select>
+                                            <input type="tel" id="profile-phone" placeholder="输入手机号"
+                                                class="security-input">
+                                        </div>
+
+                                        <div class="sms-input-group">
+                                            <input type="text" id="profile-sms-code" placeholder="6位验证码"
+                                                class="security-input" maxlength="6">
+                                            <button class="secondary-btn" id="profileSendSmsBtn"
+                                                onclick="sendSmsCode('profile')">获取验证码</button>
+                                        </div>
+
+                                        <button class="save-btn" onclick="bindPhoneNumber()">立即绑定</button>
+                                    </div>
+
+                                    <!-- If bound, show phone number and unbind option -->
+                                    <div id="phoneBoundUI" style="display: none;">
+                                        <div class="bound-phone-card">
+                                            <i class="fas fa-mobile-alt"></i>
+                                            <span id="boundPhoneDisplay"></span>
+                                            <i class="fas fa-check-circle"
+                                                style="margin-left: auto; color: #10b981;"></i>
+                                        </div>
+                                        <button class="secondary-btn" onclick="unbindPhoneNumber()"
+                                            style="width: 100%;">解绑手机号</button>
+                                    </div>
+                                </div>
+
+                                <!-- Delete Account Section -->
+                                <div id="section-delete" class="security-section">
+                                    <h3 class="section-title danger-text">注销账号</h3>
+                                    <p class="section-desc">此操作不可恢复，您的所有数据将被永久删除。</p>
+                                    <div class="danger-warning">
+                                        <i class="fas fa-exclamation-triangle"></i>
+                                        <div>
+                                            <strong>警告</strong>
+                                            <p>注销后无法恢复账号和相关数据</p>
+                                        </div>
+                                    </div>
+                                    <button class="danger-btn" onclick="deleteAccount()">永久注销账号</button>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -624,8 +682,8 @@
     </div>
 
     <!-- Elastic Press Effect -->
-    <script src="elastic-press.js?v=20251126_GOOGLE_OAUTH_FIX" defer></script>
-    <script src="script.js?v=1764206414" defer></script>
+    <script src="elastic-press.js?v=FIX_CURSOR_FINAL" defer></script>
+    <script src="script.js?v=1764222001" defer></script>
 </body>
 
 </html>
