Fix: Mobile UI fixes round 3 - modal scrolling, avatar shadow and dimensions, input zoom prevention

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="security-cards.css?v=NO_LAYOUT_SHIFT">
     <link rel="stylesheet" href="login_styles.css?v=FIX_CURSOR_FINAL">
     <link rel="stylesheet" href="login_dual_mode.css">
+    <link rel="stylesheet" href="avatar-fix.css?v=FIX_AVATAR_SQUASH">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script type="text/javascript">
         (function () {
