--- a/gemini_binding.html
+++ b/gemini_binding.html
@@ -44,6 +44,33 @@
         .page-exit {
             animation: fadeOutDown 0.3s ease-in forwards;
         }
+
+        /* Mobile-specific centering and layout */
+        @media (max-width: 768px) {
+            body {
+                display: block !important;
+                height: auto !important;
+                overflow-y: auto !important;
+            }
+
+            .article-container {
+                padding: 20px 10px !important;
+                display: flex;
+                justify-content: center;
+                align-items: flex-start;
+                width: 100%;
+            }
+
+            .glass-card {
+                width: 100% !important;
+                max-width: 100% !important;
+                margin: 0 auto;
+            }
+
+            .notion-content {
+                padding: 20px !important;
+            }
+        }
     </style>
     <script>
         // Handle back button with exit animation
