--- a/guestbook.html
+++ b/guestbook.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
@@ -88,12 +88,19 @@
         /* Prevent iOS zoom on input focus */
         @media (max-width: 768px) {
 
+            /* Global text size adjustment prevention */
+            * {
+                -webkit-text-size-adjust: 100%;
+            }
+
+            /* Force all inputs to 16px minimum */
             textarea,
+            input,
+            select,
             input[type="text"],
             input[type="email"],
             input[type="password"] {
                 font-size: 16px !important;
-                /* Prevent iOS auto-zoom */
             }
         }
     </style>
@@ -101,6 +108,7 @@
         // Handle back button with exit animation
         document.addEventListener('DOMContentLoaded', function () {
             const backBtn = document.querySelector('.floating-back-btn');
+
             if (backBtn) {
                 backBtn.addEventListener('click', function (e) {
                     e.preventDefault();
@@ -108,6 +116,7 @@
 
                     // Add exit animation to main container
                     const mainContainer = document.querySelector('.guestbook-main');
+
                     if (mainContainer) {
                         mainContainer.classList.add('page-exit');
                     }
@@ -115,7 +124,9 @@
                     // Navigate after animation
                     setTimeout(() => {
                         window.location.href = targetUrl;
-                    }, 300);
+                    }
+
+                        , 300);
                 });
             }
         });
@@ -123,73 +134,53 @@
 </head>
 
 <body class="guestbook-page">
-    <!-- Background Blobs -->
-    <div class="background-blobs">
-        <div class="blob blob-1"></div>
-        <div class="blob blob-2"></div>
-        <div class="blob blob-3"></div>
-    </div>
-
-    <!-- Floating Back Button -->
-    <a href="index.html" class="floating-back-btn">
-        <i class="fa-solid fa-house"></i> 返回首页
-    </a>
-
-    <!-- Floating Clear Button -->
-    <button id="clearAllBtn" class="floating-clear-btn" title="清空所有留言">
-        <i class="fas fa-trash-alt"></i>
-    </button>
-
-    <!-- Main Content -->
-    <div class="guestbook-main">
-        <div id="messageContainer" class="message-container">
-            <!-- Messages will be inserted here by JavaScript -->
+    < !-- Background Blobs -->
+        <div class="background-blobs">
+            <div class="blob blob-1"></div>
+            <div class="blob blob-2"></div>
+            <div class="blob blob-3"></div>
         </div>
-
-        <div id="emptyState" class="empty-state-large" style="display: none;">
-            <i class="fas fa-comments"></i>
-            <p>还没有留言哦</p>
-            <p class="empty-hint">快去首页留下你的第一条留言吧!</p>
-        </div>
-    </div>
-
-    <!-- Comment Modal -->
-    <div class="modal-overlay" id="commentModal" onclick="closeCommentModal(event)">
-        <div class="modal-content premium-modal" style="position: relative; max-width: 500px;">
-            <!-- Mac Window Controls -->
-            <div class="mac-controls">
-                <div class="mac-dot red" onclick="closeCommentModal(event)">
-                    <i class="fas fa-times"></i>
-                </div>
-            </div>
-
-            <div class="modal-title">发表评论</div>
-            <p class="modal-subtitle">
-                分享您的想法
-            </p>
-
-            <form id="commentForm">
-                <input type="hidden" id="commentMessageId">
-
-                <div class="form-group">
-                    <label for="commentContent">评论内容</label>
-                    <textarea id="commentContent" rows="3" placeholder="写下你的评论..." required></textarea>
-                </div>
-                <div class="form-actions">
-                    <button type="submit" class="submit-btn">发送</button>
-                </div>
-            </form>
-        </div>
-    </div>
-
-    <!-- LeanCloud SDK -->
-    <script src="https://cdn.jsdelivr.net/npm/leancloud-storage@4.15.2/dist/av-min.js"></script>
-    <script src="./leancloud-init.js?v=20251125_ACL_FIX" defer></script>
-    <script src="./leancloud-auth-functions.js?v=20251125_ACL_FIX" defer></script>
-    <script src="./leancloud-guestbook-functions.js?v=20251125_ACL_FIX" defer></script>
-
-    <script src="script.js?v=20251125_ACL_FIX" defer></script>
-    <script src="guestbook.js?v=20251125_ACL_FIX" defer></script>
+        < !-- Floating Back Button --><a href="index.html" class="floating-back-btn"><i
+                    class="fa-solid fa-house"></i>返回首页 </a>
+            < !-- Floating Clear Button --><button id="clearAllBtn" class="floating-clear-btn" title="清空所有留言"><i
+                        class="fas fa-trash-alt"></i></button>
+                < !-- Main Content -->
+                    <div class="guestbook-main">
+                        <div id="messageContainer" class="message-container">
+                            < !-- Messages will be inserted here by JavaScript -->
+                        </div>
+                        <div id="emptyState" class="empty-state-large" style="display: none;"><i
+                                class="fas fa-comments"></i>
+                            <p>还没有留言哦</p>
+                            <p class="empty-hint">快去首页留下你的第一条留言吧 !</p>
+                        </div>
+                    </div>
+                    < !-- Comment Modal -->
+                        <div class="modal-overlay" id="commentModal" onclick="closeCommentModal(event)">
+                            <div class="modal-content premium-modal" style="position: relative; max-width: 500px;">
+                                < !-- Mac Window Controls -->
+                                    <div class="mac-controls">
+                                        <div class="mac-dot red" onclick="closeCommentModal(event)"><i
+                                                class="fas fa-times"></i></div>
+                                    </div>
+                                    <div class="modal-title">发表评论</div>
+                                    <p class="modal-subtitle">分享您的想法 </p>
+                                    <form id="commentForm"><input type="hidden" id="commentMessageId">
+                                        <div class="form-group"><label for="commentContent">评论内容</label><textarea
+                                                id="commentContent" rows="3" placeholder="写下你的评论..."
+                                                required></textarea></div>
+                                        <div class="form-actions"><button type="submit" class="submit-btn">发送</button>
+                                        </div>
+                                    </form>
+                            </div>
+                        </div>
+                        < !-- LeanCloud SDK -->
+                            <script src="https://cdn.jsdelivr.net/npm/leancloud-storage@4.15.2/dist/av-min.js"></script>
+                            <script src="./leancloud-init.js?v=20251125_ACL_FIX" defer></script>
+                            <script src="./leancloud-auth-functions.js?v=20251125_ACL_FIX" defer></script>
+                            <script src="./leancloud-guestbook-functions.js?v=20251125_ACL_FIX" defer></script>
+                            <script src="script.js?v=20251125_ACL_FIX" defer></script>
+                            <script src="guestbook.js?v=20251125_ACL_FIX" defer></script>
 </body>
 
 </html>
